--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/josephajayi/Desktop/Selenium Drivers/TestNG jar Files/testng-7.4.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
